<resources>
    <string name="app_name">Inventory App</string>
    <string name="dummy">Insert Dummy Data</string>
    <string name="delete_all">Delete all</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="image">Select an Image</string>
    <string name="browse_image">Browse Image</string>
    <string name="empty_list">No product in storage. Click add button to add product.</string>
</resources>
